add experimental single header implementation
works, but very likely broken. So don't use it. See the readme and code
comments in npcl.h

Signed-off-by: Tianhao Wang <shrik3@mailbox.org>

--- a/test/Makefile
+++ b/test/Makefile
@@ -11,8 +11,11 @@ LIBPCL = ../libpcl.a
 .PHONY: all clean
 all: $(tests)
 
+test_npcl: test_npcl.c
+	gcc -o $@ $^
+
 clean:
-	rm -f *.o $(tests)
+	rm -f *.o $(tests) test_npcl
 
 %: %.c
 	gcc -o $@ $^ $(LIBPCL)  -lpthread -include $(PCL_INCLUDE)
